<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Line Please</string>
    <string name="add_button">+</string>
    <string name="back">Back</string>
    <string name="empty"></string>
    <string name="character">Character</string>
    <string name="line">Line</string>
    <string name="add_lines_online">You can add your lines online too!\nJust visit http://linepela.se and start adding</string>
    <string name="add_line">Add Line</string>
    <string name="email">E-Mail</string>
    <string name="reset_password">Reset Password</string>
    <string name="cancel">Cancel</string>
    <string name="record_line">Record</string>
    <string name="play_line">Play</string>
    <string name="remove_recording">Remove Recording</string>
    <string name="done">Done</string>
    <string name="stop">Stop</string>
    <string name="save">Save</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>
