<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/record_lines_layout"
	android:focusable="true"
	android:focusableInTouchMode="true"
	android:paddingTop="0dip"
	style="@style/View">
    <LinearLayout 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:gravity="right" 
    	android:id="@+id/record_lines_sublayout"
    	android:background="@drawable/topbg">
    	<ProgressBar 
			android:id="@+id/loading_record_lines" 
			android:layout_height="20dip" 
			android:layout_width="20dip"
			android:layout_gravity="center_vertical"
			>
		</ProgressBar>
        <Button 
        	android:layout_width="wrap_content" 
        	android:layout_height="40dip"
        	android:id="@+id/back_record_lines"
        	android:text="@string/back"
        	android:background="@drawable/button_purple"
			style="@style/ButtonText"> 
        	</Button>
    </LinearLayout>
    <ImageView
        android:contentDescription="@string/empty"
		android:layout_width="0dip"
		android:layout_height="10dip"
		android:src="@drawable/empty">
	</ImageView>

	<TextView
	    android:id="@+id/record_lines_character"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:hint="@string/character" >

	</TextView>
    <ImageView
        android:contentDescription="@string/empty"
		android:layout_width="0dip"
		android:layout_height="10dip"
		android:src="@drawable/empty">
	</ImageView>

	<TextView
	    android:id="@+id/record_lines_line"
	    android:layout_width="fill_parent"
	    android:layout_height="204dp"
	    android:gravity="center_horizontal"
	    android:hint="@string/line"
	    android:lines="5" >

	</TextView>	
	<Button 
		android:text="@string/record_line" 
		android:id="@+id/record_line"
		android:background="@drawable/button_purple"
		style="@style/ButtonText">
	</Button>
	<Button 
		android:text="@string/play_line" 
		android:id="@+id/play_line"
		android:background="@drawable/button_purple"
		style="@style/ButtonText">
	</Button>
	<Button 
		android:text="@string/remove_recording" 
		android:id="@+id/remove_recording"
		android:background="@drawable/button_black"
		style="@style/ButtonText">
	</Button>
	<Button 
		android:text="@string/done" 
		android:id="@+id/done"
		android:background="@drawable/button_black"
		style="@style/ButtonText">
	</Button>		
</LinearLayout>