<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/add_lines"
	android:focusable="true"
	android:focusableInTouchMode="true"
	android:paddingTop="0dip"
	style="@style/View">
    <LinearLayout 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:gravity="right" 
    	android:id="@+id/add_lines_sublayout"
    	android:background="@drawable/topbg">
    	<ProgressBar 
			android:id="@+id/loading_add_lines" 
			android:layout_height="20dip" 
			android:layout_width="20dip"
			android:layout_gravity="center_vertical"
			>
		</ProgressBar>
		<Button 
        	android:layout_width="wrap_content" 
        	android:layout_height="40dip"
        	android:id="@+id/save_topbar"
        	android:text="@string/save"
        	android:background="@drawable/button_purple"
			style="@style/ButtonText"> 
        	</Button>
        <Button 
        	android:layout_width="wrap_content" 
        	android:layout_height="40dip"
        	android:id="@+id/back_lines"
        	android:text="@string/back"
        	android:background="@drawable/button_purple"
			style="@style/ButtonText"> 
        	</Button>
    </LinearLayout>
    <ImageView
        android:contentDescription="@string/empty"
		android:layout_width="0dip"
		android:layout_height="10dip"
		android:src="@drawable/empty">
	</ImageView>
	<EditText 
		android:id="@+id/character"
		android:hint="@string/character"
		style="@style/addLinesInput">
	</EditText>
    <ImageView
        android:contentDescription="@string/empty"
		android:layout_width="0dip"
		android:layout_height="10dip"
		android:src="@drawable/empty">
	</ImageView>

	<EditText
	    android:id="@+id/line"
	    style="@style/addLinesInput"
	    android:layout_height="142dp"
	    android:gravity="top"
	    android:hint="@string/line"
	    android:lines="5" >

	</EditText>
	  <RadioGroup
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:layout_marginTop="5dip"
      android:orientation="horizontal">
	      <RadioButton
	          android:id="@+id/radio_female"
	          android:layout_width="100dip"
	          android:layout_height="wrap_content"
	          android:onClick="onRadioButtonClicked"
	          android:background="@drawable/button_black"
	          android:gravity="center_horizontal"
	          android:checked="true"
	          android:text="@string/female" />

	      <RadioButton android:id="@+id/radio_male"
	          android:layout_width="100dip"
	          android:layout_height="wrap_content"
	          android:background="@drawable/button_black"
	          android:gravity="center_horizontal"
	          android:text="@string/male"
	          android:onClick="onRadioButtonClicked"/>
    </RadioGroup>	
	<Button 
		android:text="@string/add_line" 
		android:id="@+id/add_line"
		android:background="@drawable/button_purple"
		style="@style/ButtonText">
	</Button>
	<TextView
		android:text="@string/add_lines_online"
		android:layout_width="200dip"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		>
	</TextView>
</LinearLayout>