<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/reset_password"
	android:focusable="true"
	android:focusableInTouchMode="true"
	android:paddingTop="0dip"
	style="@style/View">
    <ImageView
        android:contentDescription="@string/empty"
		android:layout_width="0dip"
		android:layout_height="10dip"
		android:src="@drawable/empty">
	</ImageView>
	<EditText 
		android:id="@+id/email"
		android:hint="@string/email"
		style="@style/addLinesInput">
	</EditText>
	<Button 
		android:text="@string/reset_password" 
		android:id="@+id/reset_password_button"
		android:background="@drawable/button_purple"
		style="@style/ButtonText">
	</Button>
	<Button 
		android:text="@string/cancel" 
		android:id="@+id/cancel_reset_password"
		android:background="@drawable/button_black"
		style="@style/ButtonText">
	</Button>	
</LinearLayout>